# facerecog

./: .dockerignore  .env.example  Dockerfile  README.md  database.py  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: docker-build.yml
