[project]
name = "facerecog"
version = "1.0.0"
description = "Face Recognition API powered by InsightFace"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.11",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0.39",
    "pymysql>=1.1.1",
    "numpy>=2.2.4",
    "Pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "insightface>=0.7.3",
    "onnxruntime>=1.20.0",
    "opencv-python-headless>=4.10.0",
    "redis>=7.0.1",
]
