[project]
name = "facerecog"
version = "2.0.0"
description = "Face Recognition API powered by InsightFace"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.137.0",
    "uvicorn==0.49.0",
    "sqlalchemy==2.0.51",
    "pymysql==1.2.0",
    "numpy==2.4.6",
    "Pillow==12.2.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "insightface==1.0.1",
    "onnxruntime==1.27.0",
    "opencv-python-headless==4.13.0.92",
    "redis==8.0.0",
]
